# agentic-adventure

./: .env  .gitignore  README.md  SNIPPETS.md  agent.py  agent_character_manager.py  gamemaster.py  mcp_dice_roller.py  mcp_roll_dice.py  pyproject.toml  rules_agent.py
slides/: slides.html  slides.md
utils/: create_knowledge_base.py
