[project]
name = "agentic-adventure"
version = "0.1.0"
description = "An adventuring workshop for mastering AI agent development with Strands framework"
readme = "README.md"
requires-python = ">=3.13"
#requires-python = ">=3.10,<=3.13.5"
dependencies = [
    # Strands AI Framework
    "strands-agents>=1.20.0",
    "strands-agents-tools",
    "strands-agents[a2a]",
    "strands-agents[gemini]",
    # Web Framework for APIs
    "fastapi[standard]",
    "pydantic",
    "uvicorn",
    # Configuration Management
    "python-dotenv",
    # Knowledge Base & Document Processing
    "chromadb>=0.4.0",
    "PyPDF2>=3.0.0",
    # Database
    "tinydb",
    # LangChain Integration
    "langchain_aws",
    "langchain_chroma",
    # Ollama Integration
    "ollama",
    "mcp>=1.26.0",
]
